--- a/static/css/index.css
+++ b/static/css/index.css
@@ -8,7 +8,7 @@ body {
 } 
 
 .header {
-  background-color: #56309f;
+  background-image: radial-gradient(circle, #c850c0, #4158d0);
   color: white;
   padding: 20px 0;
   text-align: center;
